<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/no_of_people"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginTop="12dp"
                    android:text="@string/number_of_people"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/NumberOfPeople"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textColor="#000000" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/roof_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/total_rooftop_area"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/AreaOfRoof"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textColor="#000000" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/non-rooftop_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/total_nonrooftop_area"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/NonRoofTopArea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textColor="#000000" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/water_demand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/ave_water_demand"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/AverageWaterDemand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:inputType="number"
                    android:textColor="#000000" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/type_of_roofs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginTop="12dp"
                    android:text="@string/type_of_rooftop"
                    android:textColor="#000000" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioGroup
                    android:id="@+id/RoofTypes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/FlatRoof"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/flat_roof" />

                    <RadioButton
                        android:id="@+id/Tiles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tiles" />

                    <RadioButton
                        android:id="@+id/IronSheets"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/iron_sheets" />

                    <RadioButton
                        android:id="@+id/Thatched"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thatched" />
                </RadioGroup>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/typeofBMPs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginTop="12dp"
                    android:text="@string/type_ofBMPs"
                    android:textColor="#000000" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioGroup
                    android:id="@+id/BMPs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/VegetatedFilterStrips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Vegetated_Filter_Strips" />

                    <RadioButton
                        android:id="@+id/PorousPavement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Porous_Pavement" />

                    <RadioButton
                        android:id="@+id/GrassedSwales"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Grassed_Swales" />

                    <RadioButton
                        android:id="@+id/ConstructedWetland"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Constructed_Wetland" />

                    <RadioButton
                        android:id="@+id/Bioretention"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Bioretention" />

                    <RadioButton
                        android:id="@+id/SandFilterSurface"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Sand_Filter_Surface" />
                </RadioGroup>
            </TableRow>

            <!-- https://developer.android.com/guide/topics/ui/floating-action-button -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/NextMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_next"
                android:layout_gravity="end|bottom"
                android:layout_margin="16dp" />
        </TableLayout>
    </ScrollView>

</RelativeLayout>