<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".FinalActivity">

            <TextView
                android:id="@+id/Results"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="0dp"
                android:background="#0079D6"
                android:gravity="center"
                android:text="@string/Results"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#DAE8FC">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:gravity="start"
                        android:singleLine="false"
                        android:text="@string/Total_Water_Demand"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/value11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/DummyText" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#DAE8FC">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:gravity="start"
                        android:singleLine="false"
                        android:text="@string/Water_Saved_Roof"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/value12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/DummyText" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#DAE8FC">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:gravity="start"
                        android:singleLine="false"
                        android:text="@string/Water_Saved_NonRoof"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/value13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/DummyText" />


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#DAE8FC">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="297dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:gravity="start"
                        android:singleLine="false"
                        android:text="@string/Cost"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/value14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/DummyText" />

                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/UsefulData"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="48dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="0dp"
                android:background="#0079D6"
                android:gravity="center"
                android:text="@string/UsefulData"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#DAE8FC">

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:gravity="start"
                        android:singleLine="false"
                        android:text="@string/Rainfall"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/value21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/DummyText" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#DAE8FC">

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:gravity="start"
                        android:singleLine="false"
                        android:text="@string/InfiltrationBasin"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/value22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/DummyText" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#DAE8FC">

                    <TextView
                        android:id="@+id/textView23"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:gravity="start"
                        android:singleLine="false"
                        android:text="@string/InfiltrationTrench"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/value23"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/DummyText" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#DAE8FC">

                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:gravity="start"
                        android:singleLine="false"
                        android:text="@string/RainBarrel"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/value24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/DummyText" />

                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
